better debugging for low-memory situations, and a new hybrid strategy for queuing